@@ -1,3 +1,7 @@
+2021-04-13 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Avoid whole window updates when expression entry state changes from empty to non-empty
+
 2021-04-04 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Do not calculate expression immediately on completion if "to" expression requires addition input (e.g. "to base #")
